--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -14,78 +14,49 @@
                 <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 our-name-descr">
                     Лучшая художественная ковка в городе
                 </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 our-name-btn">
                     <a class="btn btn-primary" href="{% url 'catalog' %}">каталог</a>
                 </div>
             </div>
             <form class="form-horizontal form-order" action="/sender" method="POST" role="form">
-            {%csrf_token%}
-            <div class="modal-header">
-                    Напишите нам
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="inputName" placeholder="имя">
+                {%csrf_token%}
+                <div class="modal-header">
+                        Напишите нам
                 </div>
-                <div class="form-group">
-                    <input type="tel" class="form-control" id="inputTel" placeholder="телефон">
-                </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" id="inputDescr" placeholder="описание заказа" rows="4"></textarea>
-                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="inputName" placeholder="имя">
+                    </div>
+                    <div class="form-group">
+                        <input type="tel" class="form-control" id="inputTel" placeholder="телефон">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" id="inputDescr" placeholder="описание заказа" rows="4"></textarea>
+                    </div>
 
-            </div>
-            <div class="modal-footer modal-footer-form">
-                <button type="submit" class="btn btn-primary">Отправить заявку</button>
-            </div>
-        </form>
-    </div>
-    <div class="main-contacts">
-        <div>
-            <p class="main-tel">{{basicdata.tel}}</p>
-            <p class="main-email">email@test.com</p>
+                </div>
+                <div class="modal-footer modal-footer-form">
+                    <button type="submit" class="btn btn-primary">Отправить заявку</button>
+                </div>
+            </form>
         </div>
-    </div>
-    </div>
-
-
-
-
-
-    
-    
-
-<!--
-
-<div class="container main-section-container">
-    <div class="main-section-info">
-        <div class="row main-section-container-title">
-            {{basicdata.our_name}}
-        </div>
-        <div class="row">
-            <div class="col-md-10">
-                Производство кованных изделий на заказ
-            </div>
-            <div class="col-md-2">
-                <a class="btn btn-primary" href="{% url 'catalog' %}">каталог</a>
+        <div class="main-contacts">
+            <div>
+                <p class="main-tel"><a href="tel: {{basicdata.tel}}">{{basicdata.tel}}</a></p>
+                <p class="main-email"><a href="mailto:email@test.com">email@test.com</a></p>
             </div>
         </div>
     </div>
-</div>
--->
-
-
 </section>
+
+
+
 <section class="info-section" id="info-section">
 <div class="container container-content">
-    <div class="section-title">
-
-    </div>
     <div class="about-us">
-        
         <div class="about-us-main-descr">
             Мы обеспечиваем наших клиентов <span class="accent-words">уникальной</span>, красивой и долговечной ковкой в исполнении <span class="accent-words">талантливых</span> мастеров. Качественно и не дорого.
         </div>
@@ -94,12 +65,11 @@
                         {%for album in albums_list%}
                 <div class="card" style="width: 20rem;">
                     <a href="{{album.get_absolute_url}}">
-                    <img class="card-img-top" src="{{album.get_prewiew}}" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">{{album.title}}</h4>
-                        
-                    </div>
-                        </a>
+                        <img class="card-img-top" src="{{album.get_prewiew}}" alt="Card image cap">
+                        <div class="card-block">
+                            <h4 class="card-title">{{album.title}}</h4>
+                        </div>
+                    </a>
                 </div>
                 {%endfor%}
              </div>
