--- a/catalog/templates/catalog/album_detail.html
+++ b/catalog/templates/catalog/album_detail.html
@@ -20,7 +20,7 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <a class="fancybox" rel="gallery1"
                 href="{{photo.img.url}}">
-                <img  src="{{photo.img.url}}" />
+                <img  src="{{photo.img.preview.url}}" />
             </a>
         </div>
         {%endfor%}
