--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -714,13 +714,38 @@ height: 50px;
 .main-text-title {
     padding-left: 0px;
         }
-.main-text-title .subtitle{
+.main-text-title.subtitle{
     width: 100%;
 }
     }
         
 @media (max-width: 992px){
 .our-name{
-   font-size: 102px;
+   font-size: 115px;
+   margin-top:0px
+        }}
+@media (max-width: 656px){
+ .main-tel{
+  font-size:24px;
+  margin-bottom:0px
+ }
+ .main-email{
+  font-size:18px
+ }
+.our-name{
+   font-size: 72px;
+   margin-top:0px
+        }}
+@media (max-width: 350px){
+
+ .main-tel{
+  font-size:24px;
+  margin-bottom:0px
+ }
+ .main-email{
+  font-size:18px
+ }
+.our-name{
+   font-size: 64px;
    margin-top:0px
         }}
