--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ходуожественная ковка в перми. Изготовление кованных изделий на заказ. Качественные кованные изделия по разумной цене">
+    <meta name="keywords" content="Ходуожественная ковка в перми. Изготовление кованных изделий на заказ. Качественные кованные изделия по разумной цене">
     <title>{{ title }}</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
