add preiew in admin

--- a/catalog/templates/catalog/album_detail.html
+++ b/catalog/templates/catalog/album_detail.html
@@ -16,7 +16,7 @@
     {{object.title}}
 </h1>
     <div class="row albums-text">
-    {{object.text}}
+    {{object.text| safe}}
     </div>
     <div class="row albums-list">
         {%for photo in object.photo_set.all%}
