--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -173,7 +173,6 @@
     </div>
 </div>
 <div class=" address-map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2115.285477631471!2d56.23423031600246!3d57.98299898120814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43e8c0c813763261%3A0x86dd4b3733380539!2z0YPQuy4g0JzQsNGA0YjRgNGD0YLQvdCw0Y8sIDIxLCDQn9C10YDQvNGMLCDQn9C10YDQvNGB0LrQuNC5INC60YDQsNC5LCA2MTQxMTE!5e0!3m2!1sru!2sru!4v1486493723555" width="100%" height="100%" allowfullscreen></iframe>
 </div>
 <div class="container container-content">
     <div class="row address">
@@ -205,6 +204,8 @@
 
     <script>
         $(document).ready(function () {
+            $('.address-map').append(
+    '<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2115.285477631471!2d56.23423031600246!3d57.98299898120814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43e8c0c813763261%3A0x86dd4b3733380539!2z0YPQuy4g0JzQsNGA0YjRgNGD0YLQvdCw0Y8sIDIxLCDQn9C10YDQvNGMLCDQn9C10YDQvNGB0LrQuNC5INC60YDQsNC5LCA2MTQxMTE!5e0!3m2!1sru!2sru!4v1486493723555" width="100%" height="100%" allowfullscreen></iframe>')
             $("#navbarCollapse .go").on("click", "a", function (event) {
                 //отменяем стандартную обработку нажатия по ссылке
                 event.preventDefault();
