--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -41,7 +41,7 @@
                         <input type="tel" class="form-control" id="inputTel" placeholder="телефон">
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="e-mail">
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" id="inputDescr" placeholder="описание заказа" rows="4"></textarea>
@@ -82,10 +82,10 @@
         <div class="about-us-main-descr">
             <p> <h2> Преимущества<span class="accent-words"> кованого металла</span>:</h2>
                 <ul>
+                    <li>Возможность изготовления по индивидуальным размерам</li>
                     <li>Красота</li>
                     <li><span class="accent-words">Долговечность</span></li>
                     <li>Хорошие защитные функции</li>
-                    <li>Возможность изготовления по индивидуальным размерам</li>
                     <li><span class="accent-words">Ручная работа</span></li>
                     <li>Кованые изделия можно выполнить в любом стиле</li>
                     <li><span class="accent-words">Ковка прекрасно сочетается с другими материалами</span></li>
@@ -112,7 +112,7 @@
                 <input type="tel" class="form-control" id="inputTel" placeholder="телефон">
             </div>
             <div class="form-group">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input type="email" class="form-control" id="inputEmail3" placeholder="e-mail">
             </div>
             <div class="form-group">
                 <textarea class="form-control" id="inputDescr" placeholder="описание заказа" rows="4"></textarea>
@@ -157,8 +157,8 @@
                     Нас можно <span class="accent-words">найти</span>:
                 </div>
                 <div class="point">
-                    г. Пермь <br>
-                    улица <span class="accent-words">Маршрутная</span>, 21
+                    г. Пермь, с. Култаево <br>
+                    улица <span class="accent-words">Романа Кашина</span>, 21
                 </div>
             </div>
         </div>
