--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -42,7 +42,7 @@
                         <li class="nav-item go">
                             <a class="nav-link" href="/#news-section">Новости</a>
                         </li>
-                        <li class="nav-item go">
+                        <li class="nav-item go" style="margin-right: 16px;">
                             <a class="nav-link" href="/#contacts-section">Контакты</a>
                         </li>
 
