--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Ходуожественная ковка в перми. Изготовление кованых изделий на заказ. Качественные кованые изделия по разумной цене">
         <meta name="keywords" content="Ходуожественная ковка в перми. Изготовление кованых изделий на заказ. Качественные кованые изделия по разумной цене">
         <title>{{ title }}</title>
+        <style> body{background-color:#000}</style>
         {% load staticfiles %}
         <link href="{% static 'app/img/favicon.ico' %}" rel="icon" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
