--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -22,10 +22,10 @@ body {
 	font-style: normal;*/
 }
 
-@font-face{
+/*@font-face{
     font-family: "MSMINCHO";
     src: url("/static/app/fonts/MSMINCHO.TTF") format("truetype");
-}
+}*/
 
 /* Set padding to keep content from hitting the edges */
 /*.body-content {
@@ -79,6 +79,10 @@ section {
 }
 
 .main-section{
+    padding-bottom: 120px;
+}
+
+.main-section{
     /*font-family:'MS Gothic';*/
     /*padding-top: 40px;*/
     display:flex;
@@ -113,7 +117,7 @@ section {
     text-align:right;
     /*color:#fff;*/
     /*text-transform: uppercase;*/
-    font-family:'Candara','MSMINCHO';
+    /*font-family:'Candara','MSMINCHO';*/
     /* font-family: 'El Messiri', sans-serif; */
     /*font-family: 'OdessaScript', 'El Messiri', sans-serif;*/
     /*font-style: italic;*/
@@ -144,7 +148,7 @@ section {
     left: 100px;*/
     font-size: 130px;
     text-transform: uppercase;
-    font-family:'MSMINCHO';
+    /*font-family:'MSMINCHO';*/
     /*font-weight:bold;*/
     /*font-family: 'El Messiri', sans-serif;*/
     /*font-family: 'OdessaScript', 'El Messiri', sans-serif;
@@ -165,6 +169,8 @@ section {
     letter-spacing: 0px;
     color: #fff;
     text-align:right;
+    font-style: italic;
+    padding: 30px;
 }
 
 .our-name-btn{
@@ -232,23 +238,24 @@ section {
 }
 
 .main-section-container .btn, .main-section-container button,
- .main-text .btn, .main-text button{
+ .main-text .btn, .main-text buttonn{
     background-color:transparent;
     /*#af183c*/
     border-color:#af183c;
     color:#af183c;
-    font-size:30px;
+    font-size:32px;
     
 }
 .main-text .btn {
     font-size:32px;
 }
 .main-text .btn.btn-small {
-    font-size:18px;
+    /*font-size:18px;*/
 }
 
+
 .main-section-container .btn:hover, .main-section-container button:hover,
-.form-order button:hover, .main-text .btn:hover
+.form-order button:hover, .main-text .btn:hover, .news-section .btn:hover
 {
     background-color:#af183c;
     border-color:#af183c;
@@ -367,7 +374,7 @@ section {
     background-color:transparent;
     border: none;
     border-bottom: 2px solid #fff;
-    border-top: 1px solid;
+    /*border-top: 1px solid;*/
     width:auto;
     margin: 0 auto;
     width:80%;
@@ -413,9 +420,12 @@ section {
 
 .address-home{
     margin-bottom:25%;
+
 }
 .address-map{
     height: 400px;
+    padding-left:40px;
+    padding-right:40px;
 }
 .address-map iframe{
     border:4px solid #af183c;
@@ -628,7 +638,7 @@ a.navbar-brand{
  color:#af183c
 }
 .breadcrumb__container{
-margin-top:50px
+margin-top:65px
 }
 
 h1 {
@@ -645,7 +655,7 @@ margin-left:0px;
 
 .albums-list .card {
     background-color: #292b2c;
-    margin:15px;
+    margin:17px;
     float:left;
 }
 
@@ -865,6 +875,11 @@ min-height: 50px;
 .modalform .btn-primary{
  background-color:#af183c
 }
+
+.modalform .btn-primary:hover{
+ cursor:pointer;
+}
+
 .card.sidebar {
  background-color:#292b2c
 }
@@ -880,6 +895,11 @@ color: rgba(255, 255, 255, 0.87);
 font-size: 1.2rem;
 }
 .card-footer{
- background-color:#292b2c
-
+    background-color:#292b2c;
+    text-align: right;
 }
+
+.card-footer {
+    border-top: none;
+}
+
