cursor for button

--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -260,6 +260,7 @@ section {
     background-color:#af183c;
     border-color:#af183c;
     color:#000;
+    cursor: pointer;
 }
 
 .our-name-btn .btn{
