--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -903,4 +903,11 @@ font-size: 1.2rem;
 .card-footer {
     border-top: none;
 }
-
+.overlay {
+	background:transparent; 
+	position:relative; 
+	width:100%;
+	height:550px;
+	top:550px;
+	margin-top:-550px;
+}
